# sonic-sairedis

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
common/: redisclient.cpp  saiattribute.cpp  saiattribute.h  saiattributelist.cpp  saiattributelist.h  saiserialize.cpp  saiserialize.h
debian/: changelog  control  libsaimetadata-dev.install  libsaimetadata-dev.links  libsaimetadata.install  libsaivs-dev.install  libsaivs.install  rules  syncd.bcm.init  syncd.init  syncd.install  syncd.mlnx.init
discovery/: Makefile  saidiscovery.cpp
etc/syncd.d/: dell_s6000.profile  dell_s6000_port_map.ini  m3000_r0.profile  m3000_r1.profile  msn2700_port_map.ini
lib/inc/: SkipRecordAttrContainer.h  sai_redis.h  sai_redis_internal.h  sairedis.h
lib/src/: Makefile.am  SkipRecordAttrContainer.cpp  sai_redis_acl.cpp  sai_redis_bfd.cpp  sai_redis_bmtor.cpp  sai_redis_bridge.cpp  sai_redis_buffer.cpp  sai_redis_debug_counter.cpp  sai_redis_dtel.cpp  sai_redis_fdb.cpp  sai_redis_generic_create.cpp  sai_redis_generic_get.cpp  sai_redis_generic_get_stats.cpp  sai_redis_generic_remove.cpp  sai_redis_generic_set.cpp  sai_redis_generic_stats.cpp  sai_redis_hash.cpp  sai_redis_hostintf.cpp  sai_redis_interfacequery.cpp  sai_redis_ipmc.cpp  sai_redis_ipmc_group.cpp  sai_redis_l2mc.cpp  sai_redis_l2mcgroup.cpp  sai_redis_lag.cpp  sai_redis_mcastfdb.cpp  sai_redis_mirror.cpp  sai_redis_mpls.cpp  sai_redis_nat.cpp  sai_redis_neighbor.cpp  sai_redis_nexthop.cpp  sai_redis_nexthopgroup.cpp  sai_redis_notifications.cpp  sai_redis_policer.cpp  sai_redis_port.cpp  sai_redis_qosmaps.cpp  sai_redis_queue.cpp  sai_redis_record.cpp  sai_redis_route.cpp  sai_redis_router.cpp  sai_redis_router_interface.cpp  (+15 more)
meta/: Makefile  Makefile.am  gen.cpp  sai_extra_acl.cpp  sai_extra_buffer.cpp  sai_extra_fdb.cpp  sai_extra_hash.cpp  sai_extra_hostintf.cpp  sai_extra_lag.cpp  sai_extra_mirror.cpp  sai_extra_neighbor.cpp  sai_extra_nexthop.cpp  sai_extra_nexthopgroup.cpp  sai_extra_policer.cpp  sai_extra_port.cpp  sai_extra_route.cpp  sai_extra_router.cpp  sai_extra_routerintf.cpp  sai_extra_samplepacket.cpp  sai_extra_schedulergroup.cpp  sai_extra_stp.cpp  sai_extra_switch.cpp  sai_extra_tunnel.cpp  sai_extra_udf.cpp  sai_extra_vlan.cpp  sai_extra_wred.cpp  sai_meta.cpp  sai_meta.h  sai_meta_acl.cpp  sai_meta_buffer.cpp  sai_meta_fdb.cpp  sai_meta_hash.cpp  sai_meta_hostintf.cpp  sai_meta_lag.cpp  sai_meta_mirror.cpp  sai_meta_neighbor.cpp  sai_meta_nexthop.cpp  sai_meta_nexthopgroup.cpp  sai_meta_policer.cpp  sai_meta_port.cpp  (+21 more)
player/: Makefile  Makefile.am  player.cpp
saidiscovery/: Makefile.am  saidiscovery.cpp
saidump/: Makefile.am  saidump.cpp
saiplayer/: Makefile.am  saiplayer.cpp
saisdkdump/: Makefile.am  saisdkdump.cpp
syncd/: Makefile.am  TimerWatchdog.cpp  TimerWatchdog.h  main.cpp  syncd.cpp  syncd.h  syncd_applyview.cpp  syncd_cli.cpp  syncd_counters.cpp  syncd_flex_counter.cpp  syncd_flex_counter.h  syncd_hard_reinit.cpp  syncd_init.cpp  syncd_notifications.cpp  syncd_pfc_watchdog.cpp  syncd_pfc_watchdog.h  syncd_reinit.cpp  syncd_request_shutdown.cpp  syncd_saiswitch.cpp  syncd_saiswitch.h  tests.cpp
syncd/scripts/: syncd_init_common.sh  syncd_start.sh
tests/: Makefile.am  aspell.en.pws  aspellcheck.pl  brcm.pl  mlnx.pl  swsslogentercheck.pl  swsslogentercheck.sh  utils.pm
tests/brcm/: acl_counter.rec  acl_counter2.rec  acl_mask.rec  acl_tables.rec  bridge_create_1.rec  bridge_create_2.rec  config_acl2.rec  empty_lag_buffer_acl.rec  empty_sw.rec  full.rec  full_buffer.rec  full_buffer_second.rec  full_hostif_remove_segfault.rec  full_nhg_bug.rec  full_nhg_bug_prio_flow_bug.rec  full_nhg_bug_trap_group_create_fail.rec  full_no_queue.rec  full_no_queue_no_ipg.rec  full_no_queue_no_ipg_no_buffer_pfofile.rec  full_queue_bug_null_buffer_profile.rec  full_second.rec  full_second_no_bridge.rec  hostif.rec  lag_comparison_logic.rec  lag_no_members.rec  lanemap.ini  nhg_comparison_logic.rec  ntf1.rec  ntf2.rec  qos_map_order.rec  query_attr_enum_values_capability.rec  query_object_type_get_availability.rec  remove_create_port.rec  remove_next_hop.rec  remove_port.rec  rif_loopback.rec  small_buffer.rec  speed_apply.rec  speed_init.rec  tunnel_map.rec  (+6 more)
tests/mlnx/: empty.rec  empty_sw.rec  full_nhg_member.rec  full_syncd_dies.rec  full_to_crash.rec  vsprofile.ini
vslib/inc/: sai_vs.h  sai_vs_internal.h  sai_vs_state.h  sai_vs_switch_BCM56850.h  sai_vs_switch_MLNX2700.h
vslib/src/: Makefile.am  sai_vs.cpp  sai_vs_acl.cpp  sai_vs_bfd.cpp  sai_vs_bmtor.cpp  sai_vs_bridge.cpp  sai_vs_buffer.cpp  sai_vs_debug_counter.cpp  sai_vs_dtel.cpp  sai_vs_fdb.cpp  sai_vs_generic_create.cpp  sai_vs_generic_get.cpp  sai_vs_generic_get_stats.cpp  sai_vs_generic_remove.cpp  sai_vs_generic_set.cpp  sai_vs_generic_stats.cpp  sai_vs_hash.cpp  sai_vs_hostintf.cpp  sai_vs_init.cpp  sai_vs_interfacequery.cpp  sai_vs_ipmc.cpp  sai_vs_ipmc_group.cpp  sai_vs_l2mc.cpp  sai_vs_l2mcgroup.cpp  sai_vs_lag.cpp  sai_vs_mcastfdb.cpp  sai_vs_mirror.cpp  sai_vs_mpls.cpp  sai_vs_nat.cpp  sai_vs_neighbor.cpp  sai_vs_nexthop.cpp  sai_vs_nexthopgroup.cpp  sai_vs_policer.cpp  sai_vs_port.cpp  sai_vs_qosmaps.cpp  sai_vs_queue.cpp  sai_vs_route.cpp  sai_vs_router.cpp  sai_vs_router_interface.cpp  sai_vs_routerintf.cpp  (+16 more)
